--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
-.container {
+.mainContainer {
     display: flex;
-    flex:1;
+    flex-direction: column;
     height:100vh;
     width:100vw;
     background-position: center;
@@ -9,4 +9,46 @@
     padding-bottom: 15px;
     background-image:url('../images/background.jpg');
     justify-content: center;
+    align-items: center;
+    color:white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .heading{
+    font-size: 30px;
+  }
+  .dateRangeInstruction{
+    font-size: 17px;
+    text-align: center;
+    padding-top: 10px;
+  }
+  .datePickerContainer{
+    text-align: center;
+  }
+  firstDatePicker{
+    margin-right: 50px;
+  }
+  .button{
+    /* padding-top: 10px; */
+  }
+  .buttonContainer{
+    margin-top: 20px;
+  }
+  .resultsContainer{
+    text-align: center;
+  }
+  .instruction{
+    font-size: 17px;
+  }
+
+  .downloadCount{
+font-size: 80px;
+margin: 5px;
+  }
+  .input{
+    width:50vw;
+    height:25px;
+    text-align: center;
+    font-size: 17px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:midnightblue
   }
