--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,9 +12,11 @@
     align-items: center;
     color:white;
     font-family: Georgia, 'Times New Roman', Times, serif;
+  
   }
   .heading{
     font-size: 30px;
+    margin-top: -100px;
   }
   .dateRangeInstruction{
     font-size: 17px;
@@ -28,7 +30,24 @@
     margin-right: 50px;
   }
   .button{
-    /* padding-top: 10px; */
+    padding:10px;
+    width:30vw;
+    box-shadow: 0px 10px 20px black;
+    background-color: #00D5C2;
+    border: none;
+    font-size: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:white;
+    /* 00D5D1,D5, */
+  }
+  .button:hover{
+    box-shadow: 0px 10px 10px black;
+    font-size: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:white;
+  }
+  .button:disabled{
+    background-color: lightgray;
   }
   .buttonContainer{
     margin-top: 20px;
